--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Git y Github</title>
 </head>
 <body>
+    <header>
+        <h1>header</h1>
+    </header>
     <div class="container">
         <h2>kher</h2>
     </div>
